# hospital-robot-ROS2

./: .gitignore  README.md  mic_node.sh  tts_play_node.sh
hospital_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hospital_ws/install/hospital_vision/share/hospital_vision/: package.bash  package.ps1  package.sh  package.xml  package.zsh
hospital_ws/install/yolo_node/share/yolo_node/: package.sh
hospital_ws/install/yolo_node_pkg/share/yolo_node_pkg/: package.ps1  package.sh  package.zsh
hospital_ws/log/: latest_build
hospital_ws/src/hospital_vision/: setup.cfg  setup.py
hospital_ws/src/hospital_vision/hospital_vision/: d435_node1.py
hospital_ws/src/yolo_node_pkg/: setup.py
hospital_ws/yolo_node/: setup.py
hospital_ws/yolo_node/yolo_node/: yolo_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hospital_vision/share/hospital_vision/: package.dsv  package.sh
install/hospital_voice/share/hospital_voice/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mini_project_hp/share/ament_index/resource_index/parent_prefix_path/: mini_project_hp
install/mini_project_hp/share/mini_project_hp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yolo_node/share/yolo_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yolo_node_pkg/share/yolo_node_pkg/: package.bash  package.dsv  package.sh  package.xml
log/: latest_build
mini_project_hp/: CMakeLists.txt  package.xml
mini_project_hp/src/: main.cpp  mainwindow.cpp  mainwindow.h  ros_thread.h
src/build-mini_project_hp-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/build-mini_project_hp-Desktop-Debug/ament_cmake_core/: mini_project_hpConfig.cmake  package.cmake
src/build-mini_project_hp-Desktop-Debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
src/build-mini_project_hp-Desktop-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/build-mini_project_hp-Desktop-Debug/mini_project_hp_autogen/: mocs_compilation.cpp
src/build-mini_project_hp-Desktop-Debug/mini_project_hp_autogen/EWIEGA46WW/: qrc_resources.cpp
src/build-mini_project_hp-Desktop-Debug/mini_project_hp_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_ros_thread.cpp  moc_ros_thread.cpp.d
src/hospital_control/: CMakeLists.txt  package.xml
src/hospital_control/config/: bridge_config.yaml
src/hospital_control/launch/: multi_nav2.launch.py  navigation2.launch.py
src/hospital_control/map/: new_hospital.pgm  new_hospital.yaml  newnew_map.pgm  newnew_map.yaml
src/hospital_control/param/: burger.yaml  robot_2_burger.yaml
src/hospital_control/rviz/: tb3_navigation2.rviz
src/hospital_control/src/: hospital_task_manager.cpp  hospital_task_manager.h
src/hospital_vision/hospital_vision/: d435_node1.py  d435_transnode.py
src/hospital_voice/: setup.cfg  setup.py
src/hospital_voice/hospital_voice/: tts_node.py  whisper_node.py
src/mini_project_hp/: CMakeLists.txt  package.xml  resources.qrc
src/mini_project_hp/.qtcreator/: CMakeLists.txt.user.9e3a834
src/mini_project_hp/src/: main.cpp  mainwindow.cpp  mainwindow.h  ros_thread.cpp  ros_thread.h
src/yolo_node/: package.xml
src/yolo_node/yolo_node/: yolo_node.py
src/yolo_node_pkg/: setup.cfg
src/yolo_node_pkg/yolo_node_pkg/: yolo_node.py
turtlebot3/: mic_node.cpp  micro_ROS.ino  tts_play_node.cpp
whisper/: whisper_test.py
whisper/record/: test.m4a  test_emergency1.m4a  test_emergency2.m4a  test_emergency3.m4a  test_medicine1.m4a  test_medicine2.m4a  test_medicine3.m4a  test_ok1.m4a  test_ok2.m4a
yolo_node/yolo_node/: yolo_node.py
(+11 files in other folders)
