cmake_minimum_required(VERSION 3.8)
project(hospital_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED) 
find_package(sensor_msgs REQUIRED)

add_executable(hospital_task_manager src/hospital_task_manager.cpp)
ament_target_dependencies(hospital_task_manager
  rclcpp
  nav2_msgs
  rclcpp_action
  std_msgs
  geometry_msgs
  sensor_msgs
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY
  launch
  param
  map
  rviz
  DESTINATION share/${PROJECT_NAME}
)

install(TARGETS
  hospital_task_manager
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
